--- a/frontend/src/shared/translations/fr_adminModuleTranslation.json
+++ b/frontend/src/shared/translations/fr_adminModuleTranslation.json
@@ -1,31 +1,27 @@
 {
-    "User editor:": "User le editor:",
-    "Change first name:": "Changer le prénom:",
-    "Change last name:": "Changer le nom de famille:",
-    "Change your profile picture:": "Change ta photo de profil:",
-    "Select your profile image": "Sélectionnez votre image de profil",
-    "Change user role:": "Changer le rôle de l'utilisateur:",
-    "New password:": "Nouveau mot de passe:",
-    "Confirm new password:": "Confirmer le nouveau mot de passe:",
-    "Update user": "Mettre à jour l'utilisateur:",
-    "Search...": "Chercher...",
-    "Error during update": "Erreur lors de la mise à jour",
-    "User has been updated": "L'utilisateur a été mis à jour",
-    "Select user": "Sélectionner un utilisateur",
-    "First name": "Prénom",
-    "Last name": "Nom de famille",
-    "Confirm password": "Confirmez le mot de passe",
-    "Title:": "Titre:",
-    "Content:": "Contenu",
-    "Title cannot be empty": "Le titre ne peut pas être vide",
-    "Content cannot be empty": "Le contenu ne peut pas être vide",
-    "Position": "Position",
-    "Position:": "Position:",
-    "RIGHT": "DROIT",
-    "Save changes": "Sauvegarder les modifications",
-    "Edit": "modifier",
-    "Delete": "Effacer",
-    "Create New Bookmark": "Créer un nouveau signet",
-    "The field is requried": "Ce champ est requis",
-    "Title is too long, max 20 characters": "Le titre est trop long, 20 caractères maximum",
+    "user_editor": "User le editor:",
+    "change_first_name": "Changer le prénom:",
+    "change_last_name": "Changer le nom de famille:",
+    "change_profile_picture": "Change ta photo de profil:",
+    "select_profile_image": "Sélectionnez votre image de profil",
+    "change_role": "Changer le rôle de l'utilisateur:",
+    "new_password": "Nouveau mot de passe:",
+    "confirm_password": "Confirmer le nouveau mot de passe:",
+    "update_user": "Mettre à jour l'utilisateur:",
+    "search": "Chercher...",
+    "error_during_update": "Erreur lors de la mise à jour",
+    "user_has_been_updated": "L'utilisateur a été mis à jour",
+    "select_user": "Sélectionner un utilisateur",
+    "title": "Titre:",
+    "content": "Contenu",
+    "title_empty": "Le titre ne peut pas être vide",
+    "content_empty": "Le contenu ne peut pas être vide",
+    "position": "Position:",
+    "right": "DROIT",
+    "save_changes": "Sauvegarder les modifications",
+    "edit": "modifier",
+    "delete": "Effacer",
+    "create_bookmark": "Créer un nouveau signet",
+    "field_required": "Ce champ est requis",
+    "title_too_long": "Le titre est trop long, 20 caractères maximum",
 }
