--- a/frontend/src/shared/translations/ita_adminModuleTranslation.json
+++ b/frontend/src/shared/translations/ita_adminModuleTranslation.json
@@ -1,31 +1,27 @@
 {
-    "User editor:": "Userro editorro:",
-    "Change first name:": "Cambia il nome:",
-    "Change last name:": "Cambia il cognome:",
-    "Change your profile picture:": "Cambia la tua immagine di profilo:",
-    "Select your profile image": "Seleziona l'immagine del tuo profilo",
-    "Change user role:": "Cambia il ruolo dell'utente:",
-    "New password:": "Nuova password;",
-    "Confirm new password:": "Conferma la nuova password",
-    "Update user": "Aggiorna utente",
-    "Search...": "Ricerca...",
-    "Error during update": "Errore durante l'aggiornamento",
-    "User has been updated": "L'utente è stato aggiornato",
-    "Select user": "Seleziona utente",
-    "First name": "nome di battesimo",
-    "Last name": "Cognome",
-    "Confirm password": "Conferma password",
-    "Title:": "Titolo:",
-    "Content:": "Soddisfare",
-    "Title cannot be empty": "Il titolo non può essere vuoto",
-    "Content cannot be empty": "Il contenuto non può essere vuoto",
-    "Position": "Posizione",
-    "Position:": "Posizione:",
-    "RIGHT": "DESTRO",
-    "Save changes": "Salva I Cambiamenti",
-    "Edit": "modificare",
-    "Delete": "Elimina",
-    "Create New Bookmark": "Crea un nuovo segnalibro",
-    "The field is requried": "Il campo è obbligatorio",
-    "Title is too long, max 20 characters": "Il titolo è troppo lungo, massimo 20 caratteri",
+    "user_editor": "Userro editorro:",
+    "change_first_name": "Cambia il nome:",
+    "change_last_name": "Cambia il cognome:",
+    "change_profile_picture": "Cambia la tua immagine di profilo:",
+    "select_profile_image": "Seleziona l'immagine del tuo profilo",
+    "change_role": "Cambia il ruolo dell'utente:",
+    "new_password": "Nuova password;",
+    "confirm_password": "Conferma la nuova password",
+    "update_user": "Aggiorna utente",
+    "search": "Ricerca...",
+    "error_during_update": "Errore durante l'aggiornamento",
+    "user_has_been_updated": "L'utente è stato aggiornato",
+    "select_user": "Seleziona utente",
+    "title": "Titolo:",
+    "content": "Soddisfare",
+    "title_empty": "Il titolo non può essere vuoto",
+    "content_empty": "Il contenuto non può essere vuoto",
+    "position": "Posizione:",
+    "right": "DESTRO",
+    "save_changes": "Salva I Cambiamenti",
+    "edit": "modificare",
+    "delete": "Elimina",
+    "create_bookmark": "Crea un nuovo segnalibro",
+    "field_required": "Il campo è obbligatorio",
+    "title_too_long": "Il titolo è troppo lungo, massimo 20 caratteri",
 }
